// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not render address summary when shippingAsBilling is false 1`] = `
<PaymentMethod
  checkout={
    Object {
      "billingAddress": Object {
        "collapsed": false,
        "completed": false,
        "errors": Object {},
      },
      "paymentMethod": Object {
        "collapsed": false,
        "completed": false,
        "selectedMethod": "card",
      },
      "shippingAddress": Object {
        "city": "Test City",
        "collapsed": true,
        "completed": true,
        "errors": Object {},
        "first_name": "Test First Name",
        "last_name": "Test Last Name",
        "line_1": "Test Address 1",
        "line_2": "Test Address 2",
        "zipcode": "Test Postcode",
      },
      "shippingAddressAsBillingAddress": false,
      "shippingMethod": Object {
        "collapsed": true,
        "completed": true,
      },
    }
  }
  order={
    Object {
      "cardErrors": false,
      "cardTokenRequested": false,
    }
  }
  setShippingBillingAddress={[Function]}
>
  <div
    aria-label="Payment method"
    className="o-form"
  >
    <div
      className="o-form__header"
    >
      <div>
        <h2>
          Payment Method
        </h2>
      </div>
      <div>
        <undefined />
      </div>
    </div>
    <div
      style={
        Object {
          "display": "block",
        }
      }
    >
      <PaymentMethodSelector
        currentMethod="card"
        onPaymentMethodChanged={undefined}
      >
        <div
          className="o-form"
        >
          <div
            aria-label="Use credit or debit card"
            className="c-payment-method-button c-payment-method-button__active"
            onClick={[Function]}
          >
            <span>
              Credit/Debit Card
            </span>
          </div>
          <div
            aria-label="Use paypal"
            className="c-payment-method-button "
            onClick={[Function]}
          >
            <span>
              PayPal
            </span>
          </div>
        </div>
      </PaymentMethodSelector>
      <StripePayment
        checkout={
          Object {
            "billingAddress": Object {
              "collapsed": false,
              "completed": false,
              "errors": Object {},
            },
            "paymentMethod": Object {
              "collapsed": false,
              "completed": false,
              "selectedMethod": "card",
            },
            "shippingAddress": Object {
              "city": "Test City",
              "collapsed": true,
              "completed": true,
              "errors": Object {},
              "first_name": "Test First Name",
              "last_name": "Test Last Name",
              "line_1": "Test Address 1",
              "line_2": "Test Address 2",
              "zipcode": "Test Postcode",
            },
            "shippingAddressAsBillingAddress": false,
            "shippingMethod": Object {
              "collapsed": true,
              "completed": true,
            },
          }
        }
        order={
          Object {
            "cardErrors": false,
            "cardTokenRequested": false,
          }
        }
        setShippingBillingAddress={[Function]}
      >
        <div
          className="o-form__wrapper"
        >
          <Component
            cardTokenRequested={false}
            checkout={
              Object {
                "billingAddress": Object {
                  "collapsed": false,
                  "completed": false,
                  "errors": Object {},
                },
                "paymentMethod": Object {
                  "collapsed": false,
                  "completed": false,
                  "selectedMethod": "card",
                },
                "shippingAddress": Object {
                  "city": "Test City",
                  "collapsed": true,
                  "completed": true,
                  "errors": Object {},
                  "first_name": "Test First Name",
                  "last_name": "Test Last Name",
                  "line_1": "Test Address 1",
                  "line_2": "Test Address 2",
                  "zipcode": "Test Postcode",
                },
                "shippingAddressAsBillingAddress": false,
                "shippingMethod": Object {
                  "collapsed": true,
                  "completed": true,
                },
              }
            }
            onCardTokenReceived={undefined}
            setCardErrors={undefined}
          >
            <p>
              Mocked Card Fields
            </p>
          </Component>
          <div
            className="o-form__input-group"
          >
            <label>
              Billing address *
            </label>
          </div>
          <_class
            checked={false}
            formName={undefined}
            label="Same as shipping address"
            name="shippingAddressAsBillingAddress"
            onBlur={undefined}
            onChange={undefined}
            type="checkbox"
          >
            <Checkbox
              checked={false}
              formName={undefined}
              label="Same as shipping address"
              name="shippingAddressAsBillingAddress"
              onBlur={undefined}
              onChange={undefined}
              renderValidationMessage={[Function]}
              type="checkbox"
            >
              <div
                className="o-form__input-group"
              >
                <label
                  className="o-form__label"
                  htmlFor="shippingAddressAsBillingAddress"
                >
                  <input
                    checked={false}
                    className="o-form__checkbox"
                    id="shippingAddressAsBillingAddress"
                    name="shippingAddressAsBillingAddress"
                    onBlur={[Function]}
                    onChange={[Function]}
                    required={undefined}
                    type="checkbox"
                  />
                  Same as shipping address
                   
                </label>
              </div>
            </Checkbox>
          </_class>
          <AddressForm
            addressType="billing"
            aria-label="Billing address form"
            checkout={
              Object {
                "billingAddress": Object {
                  "collapsed": false,
                  "completed": false,
                  "errors": Object {},
                },
                "paymentMethod": Object {
                  "collapsed": false,
                  "completed": false,
                  "selectedMethod": "card",
                },
                "shippingAddress": Object {
                  "city": "Test City",
                  "collapsed": true,
                  "completed": true,
                  "errors": Object {},
                  "first_name": "Test First Name",
                  "last_name": "Test Last Name",
                  "line_1": "Test Address 1",
                  "line_2": "Test Address 2",
                  "zipcode": "Test Postcode",
                },
                "shippingAddressAsBillingAddress": false,
                "shippingMethod": Object {
                  "collapsed": true,
                  "completed": true,
                },
              }
            }
            formName="billingAddress"
            onBlur={undefined}
            onChange={undefined}
            onShowField={undefined}
            onToggleCollapsed={undefined}
            title="Billing Address"
          >
            <div
              className="o-form"
            >
              <div
                className="o-form__header"
              >
                <div>
                  <h2>
                    Billing Address
                  </h2>
                </div>
                <div>
                  <undefined />
                </div>
              </div>
              <div>
                <undefined />
              </div>
              <form
                className="o-form__wrapper"
              >
                <div>
                  <_class
                    formName="billingAddress"
                    label="Country"
                    name="country_code"
                    onBlur={undefined}
                    onChange={undefined}
                    options={
                      Array [
                        Object {
                          "id": 1,
                          "title": "United Kingdom",
                          "value": "GB",
                        },
                        Object {
                          "id": 2,
                          "title": "United States",
                          "value": "US",
                        },
                      ]
                    }
                    prompt="Select a Country"
                    required={true}
                    rules={
                      Object {
                        "required": true,
                      }
                    }
                    validationMessage={undefined}
                    value={undefined}
                  >
                    <DropdownSelect
                      formName="billingAddress"
                      label="Country"
                      name="country_code"
                      onBlur={undefined}
                      onChange={undefined}
                      options={
                        Array [
                          Object {
                            "id": 1,
                            "title": "United Kingdom",
                            "value": "GB",
                          },
                          Object {
                            "id": 2,
                            "title": "United States",
                            "value": "US",
                          },
                        ]
                      }
                      prompt="Select a Country"
                      renderValidationMessage={[Function]}
                      required={true}
                      rules={
                        Object {
                          "required": true,
                        }
                      }
                      validationMessage={undefined}
                      value={undefined}
                    >
                      <div
                        className="o-form__input-group"
                      >
                        <label
                          className="o-form__label"
                          htmlFor="country_code"
                        >
                          Country
                           *
                        </label>
                        <select
                          className="o-form__input-block o-form__input-field"
                          id="country_code"
                          name="country_code"
                          onBlur={[Function]}
                          onChange={[Function]}
                          required={true}
                          role="listbox"
                          value={undefined}
                        >
                          <option
                            aria-posinset="0"
                            aria-setsize={2}
                            role="option"
                            value=""
                          >
                            Select a Country
                          </option>
                          <option
                            aria-posinset={1}
                            aria-setsize={2}
                            key="0"
                            role="option"
                            value="GB"
                          >
                            United Kingdom
                          </option>
                          <option
                            aria-posinset={2}
                            aria-setsize={2}
                            key="1"
                            role="option"
                            value="US"
                          >
                            United States
                          </option>
                        </select>
                      </div>
                    </DropdownSelect>
                  </_class>
                </div>
                <div
                  className="o-flex o-flex__space-between"
                >
                  <div
                    className="o-flex-full-width-s"
                    key="0"
                  >
                    <div>
                      <_class
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="First Name"
                        name="first_name"
                        onBlur={undefined}
                        onChange={undefined}
                        required={true}
                        rules={
                          Object {
                            "maxLength": 50,
                            "required": true,
                          }
                        }
                        type={undefined}
                        validationMessage={undefined}
                        value={undefined}
                      >
                        <Input
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="First Name"
                          name="first_name"
                          onBlur={undefined}
                          onChange={undefined}
                          renderValidationMessage={[Function]}
                          required={true}
                          rules={
                            Object {
                              "maxLength": 50,
                              "required": true,
                            }
                          }
                          type={undefined}
                          validationMessage={undefined}
                          value={undefined}
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <div>
                              <label
                                className="o-form__label"
                                htmlFor="first_name"
                              >
                                First Name
                                 *
                              </label>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="first_name"
                                name="first_name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder={undefined}
                                required={true}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Input>
                      </_class>
                    </div>
                  </div>
                  <div
                    className="o-flex-full-width-s"
                    key="1"
                  >
                    <div>
                      <_class
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="Last Name"
                        name="last_name"
                        onBlur={undefined}
                        onChange={undefined}
                        required={true}
                        rules={
                          Object {
                            "maxLength": 50,
                            "required": true,
                          }
                        }
                        type={undefined}
                        validationMessage={undefined}
                        value={undefined}
                      >
                        <Input
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="Last Name"
                          name="last_name"
                          onBlur={undefined}
                          onChange={undefined}
                          renderValidationMessage={[Function]}
                          required={true}
                          rules={
                            Object {
                              "maxLength": 50,
                              "required": true,
                            }
                          }
                          type={undefined}
                          validationMessage={undefined}
                          value={undefined}
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <div>
                              <label
                                className="o-form__label"
                                htmlFor="last_name"
                              >
                                Last Name
                                 *
                              </label>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="last_name"
                                name="last_name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder={undefined}
                                required={true}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Input>
                      </_class>
                    </div>
                  </div>
                </div>
                <div>
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <p>
                      + Add Company Name (optional)
                    </p>
                  </a>
                </div>
                <div>
                  <div>
                    <_class
                      className="o-form__input-block"
                      formName="billingAddress"
                      label="Address 1"
                      name="line_1"
                      onBlur={undefined}
                      onChange={undefined}
                      required={true}
                      rules={
                        Object {
                          "required": true,
                        }
                      }
                      type={undefined}
                      validationMessage={undefined}
                      value={undefined}
                    >
                      <Input
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="Address 1"
                        name="line_1"
                        onBlur={undefined}
                        onChange={undefined}
                        renderValidationMessage={[Function]}
                        required={true}
                        rules={
                          Object {
                            "required": true,
                          }
                        }
                        type={undefined}
                        validationMessage={undefined}
                        value={undefined}
                      >
                        <div
                          className="o-form__input-group"
                        >
                          <div>
                            <label
                              className="o-form__label"
                              htmlFor="line_1"
                            >
                              Address 1
                               *
                            </label>
                            <input
                              checked={false}
                              className="o-form__input-field o-form__input-block"
                              id="line_1"
                              name="line_1"
                              onBlur={[Function]}
                              onChange={[Function]}
                              placeholder={undefined}
                              required={true}
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </Input>
                    </_class>
                  </div>
                </div>
                <div>
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <p>
                      + Add Address 2 (optional)
                    </p>
                  </a>
                </div>
                <div>
                  <div
                    key="0"
                  >
                    <div>
                      <_class
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="Post Code"
                        name="zipcode"
                        onBlur={undefined}
                        onChange={undefined}
                        required={true}
                        rules={
                          Object {
                            "postcode": true,
                            "required": true,
                          }
                        }
                        type={undefined}
                        validationMessage={undefined}
                        value={undefined}
                      >
                        <Input
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="Post Code"
                          name="zipcode"
                          onBlur={undefined}
                          onChange={undefined}
                          renderValidationMessage={[Function]}
                          required={true}
                          rules={
                            Object {
                              "postcode": true,
                              "required": true,
                            }
                          }
                          type={undefined}
                          validationMessage={undefined}
                          value={undefined}
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <div>
                              <label
                                className="o-form__label"
                                htmlFor="zipcode"
                              >
                                Post Code
                                 *
                              </label>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="zipcode"
                                name="zipcode"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder={undefined}
                                required={true}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Input>
                      </_class>
                    </div>
                  </div>
                  <div
                    key="1"
                  >
                    <div>
                      <_class
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="City"
                        name="city"
                        onBlur={undefined}
                        onChange={undefined}
                        required={true}
                        rules={
                          Object {
                            "required": true,
                          }
                        }
                        type={undefined}
                        validationMessage={undefined}
                        value={undefined}
                      >
                        <Input
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="City"
                          name="city"
                          onBlur={undefined}
                          onChange={undefined}
                          renderValidationMessage={[Function]}
                          required={true}
                          rules={
                            Object {
                              "required": true,
                            }
                          }
                          type={undefined}
                          validationMessage={undefined}
                          value={undefined}
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <div>
                              <label
                                className="o-form__label"
                                htmlFor="city"
                              >
                                City
                                 *
                              </label>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="city"
                                name="city"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder={undefined}
                                required={true}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Input>
                      </_class>
                    </div>
                  </div>
                  <div
                    key="2"
                  >
                    <div>
                      <_class
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="County"
                        name="state"
                        onBlur={undefined}
                        onChange={undefined}
                        required={undefined}
                        rules={undefined}
                        type={undefined}
                        validationMessage={undefined}
                        value={undefined}
                      >
                        <Input
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="County"
                          name="state"
                          onBlur={undefined}
                          onChange={undefined}
                          renderValidationMessage={[Function]}
                          required={undefined}
                          rules={undefined}
                          type={undefined}
                          validationMessage={undefined}
                          value={undefined}
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <div>
                              <label
                                className="o-form__label"
                                htmlFor="state"
                              >
                                County
                              </label>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="state"
                                name="state"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder={undefined}
                                required={undefined}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Input>
                      </_class>
                    </div>
                  </div>
                  <div
                    key="3"
                  >
                    <div>
                      <_class
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="Phone"
                        name="primary_phone"
                        onBlur={undefined}
                        onChange={undefined}
                        required={true}
                        rules={
                          Object {
                            "phone": true,
                            "required": true,
                          }
                        }
                        type={undefined}
                        validationMessage={undefined}
                        value={undefined}
                      >
                        <Input
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="Phone"
                          name="primary_phone"
                          onBlur={undefined}
                          onChange={undefined}
                          renderValidationMessage={[Function]}
                          required={true}
                          rules={
                            Object {
                              "phone": true,
                              "required": true,
                            }
                          }
                          type={undefined}
                          validationMessage={undefined}
                          value={undefined}
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <div>
                              <label
                                className="o-form__label"
                                htmlFor="primary_phone"
                              >
                                Phone
                                 *
                              </label>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="primary_phone"
                                name="primary_phone"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder={undefined}
                                required={true}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Input>
                      </_class>
                    </div>
                  </div>
                  <div
                    key="4"
                  >
                    <div>
                      <_class
                        className="o-form__input-block"
                        formName="billingAddress"
                        label="Email"
                        name="email"
                        onBlur={undefined}
                        onChange={undefined}
                        required={true}
                        rules={
                          Object {
                            "email": true,
                            "required": true,
                          }
                        }
                        type="email"
                        validationMessage={undefined}
                        value={undefined}
                      >
                        <Input
                          className="o-form__input-block"
                          formName="billingAddress"
                          label="Email"
                          name="email"
                          onBlur={undefined}
                          onChange={undefined}
                          renderValidationMessage={[Function]}
                          required={true}
                          rules={
                            Object {
                              "email": true,
                              "required": true,
                            }
                          }
                          type="email"
                          validationMessage={undefined}
                          value={undefined}
                        >
                          <div
                            className="o-form__input-group"
                          >
                            <div>
                              <label
                                className="o-form__label"
                                htmlFor="email"
                              >
                                Email
                                 *
                              </label>
                              <input
                                checked={false}
                                className="o-form__input-field o-form__input-block"
                                id="email"
                                name="email"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder={undefined}
                                required={true}
                                type="email"
                                value=""
                              />
                            </div>
                          </div>
                        </Input>
                      </_class>
                    </div>
                  </div>
                </div>
                <p>
                  * Denotes required fields
                </p>
                <div>
                  <undefined />
                </div>
                <div>
                  <undefined />
                </div>
              </form>
            </div>
          </AddressForm>
        </div>
      </StripePayment>
    </div>
    <div
      aria-label="Use gift card or rewards code"
      className="o-form__wrapper"
    >
      <p>
        + Use a Gift Card / Rewards Code
      </p>
    </div>
  </div>
</PaymentMethod>
`;

exports[`Renders correct address summary when shippingAsBilling is true 1`] = `
<PaymentMethod
  checkout={
    Object {
      "billingAddress": Object {},
      "paymentMethod": Object {
        "collapsed": false,
        "completed": false,
        "selectedMethod": "card",
      },
      "shippingAddress": Object {
        "city": "Test City",
        "collapsed": true,
        "completed": true,
        "errors": Object {},
        "first_name": "Test First Name",
        "last_name": "Test Last Name",
        "line_1": "Test Address 1",
        "line_2": "Test Address 2",
        "zipcode": "Test Postcode",
      },
      "shippingAddressAsBillingAddress": true,
      "shippingMethod": Object {
        "collapsed": true,
        "completed": true,
      },
    }
  }
  order={
    Object {
      "cardTokenRequested": false,
    }
  }
  setShippingBillingAddress={[Function]}
>
  <div
    aria-label="Payment method"
    className="o-form"
  >
    <div
      className="o-form__header"
    >
      <div>
        <h2>
          Payment Method
        </h2>
      </div>
      <div>
        <undefined />
      </div>
    </div>
    <div
      style={
        Object {
          "display": "block",
        }
      }
    >
      <PaymentMethodSelector
        currentMethod="card"
        onPaymentMethodChanged={undefined}
      >
        <div
          className="o-form"
        >
          <div
            aria-label="Use credit or debit card"
            className="c-payment-method-button c-payment-method-button__active"
            onClick={[Function]}
          >
            <span>
              Credit/Debit Card
            </span>
          </div>
          <div
            aria-label="Use paypal"
            className="c-payment-method-button "
            onClick={[Function]}
          >
            <span>
              PayPal
            </span>
          </div>
        </div>
      </PaymentMethodSelector>
      <StripePayment
        checkout={
          Object {
            "billingAddress": Object {},
            "paymentMethod": Object {
              "collapsed": false,
              "completed": false,
              "selectedMethod": "card",
            },
            "shippingAddress": Object {
              "city": "Test City",
              "collapsed": true,
              "completed": true,
              "errors": Object {},
              "first_name": "Test First Name",
              "last_name": "Test Last Name",
              "line_1": "Test Address 1",
              "line_2": "Test Address 2",
              "zipcode": "Test Postcode",
            },
            "shippingAddressAsBillingAddress": true,
            "shippingMethod": Object {
              "collapsed": true,
              "completed": true,
            },
          }
        }
        order={
          Object {
            "cardTokenRequested": false,
          }
        }
        setShippingBillingAddress={[Function]}
      >
        <div
          className="o-form__wrapper"
        >
          <Component
            cardTokenRequested={false}
            checkout={
              Object {
                "billingAddress": Object {},
                "paymentMethod": Object {
                  "collapsed": false,
                  "completed": false,
                  "selectedMethod": "card",
                },
                "shippingAddress": Object {
                  "city": "Test City",
                  "collapsed": true,
                  "completed": true,
                  "errors": Object {},
                  "first_name": "Test First Name",
                  "last_name": "Test Last Name",
                  "line_1": "Test Address 1",
                  "line_2": "Test Address 2",
                  "zipcode": "Test Postcode",
                },
                "shippingAddressAsBillingAddress": true,
                "shippingMethod": Object {
                  "collapsed": true,
                  "completed": true,
                },
              }
            }
            onCardTokenReceived={undefined}
            setCardErrors={undefined}
          >
            <p>
              Mocked Card Fields
            </p>
          </Component>
          <div
            className="o-form__input-group"
          >
            <label>
              Billing address *
            </label>
          </div>
          <_class
            checked={true}
            formName={undefined}
            label="Same as shipping address"
            name="shippingAddressAsBillingAddress"
            onBlur={undefined}
            onChange={undefined}
            type="checkbox"
          >
            <Checkbox
              checked={true}
              formName={undefined}
              label="Same as shipping address"
              name="shippingAddressAsBillingAddress"
              onBlur={undefined}
              onChange={undefined}
              renderValidationMessage={[Function]}
              type="checkbox"
            >
              <div
                className="o-form__input-group"
              >
                <label
                  className="o-form__label"
                  htmlFor="shippingAddressAsBillingAddress"
                >
                  <input
                    checked={true}
                    className="o-form__checkbox"
                    id="shippingAddressAsBillingAddress"
                    name="shippingAddressAsBillingAddress"
                    onBlur={[Function]}
                    onChange={[Function]}
                    required={undefined}
                    type="checkbox"
                  />
                  Same as shipping address
                   
                </label>
              </div>
            </Checkbox>
          </_class>
          <div
            aria-label="Shipping address to be used for billing"
            className="o-payment-method__address-summary"
          >
            <h4>
              Test First Name Test Last Name
            </h4>
            <p>
              Test Address 1
            </p>
            <p>
              Test Address 2
            </p>
            <p>
              Test City
            </p>
            <p>
              Test Postcode
            </p>
          </div>
        </div>
      </StripePayment>
    </div>
    <div
      aria-label="Use gift card or rewards code"
      className="o-form__wrapper"
    >
      <p>
        + Use a Gift Card / Rewards Code
      </p>
    </div>
  </div>
</PaymentMethod>
`;

exports[`renders payment summary on collapsing 1`] = `
<PaymentMethod
  checkout={
    Object {
      "billingAddress": Object {
        "city": "Leeds",
        "collapsed": true,
        "completed": true,
        "country_code": "GBP",
        "errors": Object {},
        "first_name": "Prasanna Gaddam",
        "label": "BILLING_LABEL",
        "last_name": "Prasanna Gaddam",
        "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
        "line_2": "Hunslet",
        "primary_phone": "07400000000",
        "state": "Yorkshire",
        "zipcode": "LS10 1QN",
      },
      "currency": "GBP",
      "currentStep": 2,
      "customer": Object {
        "email": "customer@example.com",
        "external_id": "123",
        "name": "John Doe",
      },
      "error": false,
      "lineItems": Array [
        Object {
          "currency": "GBP",
          "paid_price_inc_tax": "10",
          "quantity": 3,
          "retail_price_inc_tax": "10",
          "sku": "SK840763631-2",
          "tax_amount": 0,
          "tax_percentage": 0,
          "title": "Textured Long T Shirt",
        },
      ],
      "loading": false,
      "paid_price_inc_tax": "0105.45",
      "paymentMethod": Object {
        "collapsed": true,
        "completed": false,
        "selectedMethod": "card",
      },
      "request_uuid": 6765757657657,
      "retail_price_inc_tax": "0105.45",
      "reviewOrder": Object {
        "collapsed": true,
        "completed": false,
      },
      "shippingAddress": Object {
        "city": "Leeds",
        "collapsed": true,
        "completed": true,
        "country_code": "GBP",
        "first_name": "Prasanna Gaddam",
        "label": "BILLING_LABEL",
        "last_name": "Prasanna Gaddam",
        "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
        "line_2": "Hunslet",
        "primary_phone": "07400000000",
        "state": "Yorkshire",
        "zipcode": "LS10 1QN",
      },
      "shippingMethod": Object {
        "collapsed": false,
        "completed": true,
        "id": "2",
        "name": "UPS Next Day",
        "paid_price_inc_tax": 5.45,
        "reference": "ups_next_day",
        "retail_price_inc_tax": 5.45,
        "sku": "ups_next_day",
        "tax_amount": 2,
        "tax_percentage": 20,
      },
      "tax_amount": 0,
    }
  }
  order={
    Object {
      "cardErrors": false,
      "cardTokenRequested": false,
    }
  }
  setShippingBillingAddress={[Function]}
>
  <div
    aria-label="Payment method"
    className="o-form"
  >
    <div
      className="o-form__header"
    >
      <div>
        <h2>
          Payment Method
        </h2>
      </div>
      <div>
        <Button
          aria-label="Edit your payment method"
          label="Edit"
          onClick={[Function]}
          size="lrg"
        >
          <button
            aria-label="Edit your payment method"
            className="o-button o-button--primary o-button--lrg"
            disabled={false}
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            Edit
          </button>
        </Button>
      </div>
    </div>
    <div
      className="o-form__wrapper o-form__error"
    >
      <p>
        <span
          className="u-bold"
        >
           Payment Mode: 
        </span>
        <span>
           
          Credit/Debit Card
           
        </span>
      </p>
      <p>
        <span
          className="u-bold"
        >
          Billing Address: 
        </span>
        <span
          className="u-bold"
        >
          Prasanna Gaddam
           
          Prasanna Gaddam
           
        </span>
        <span>
          Apartment 19, Waterloo Court, 17 Hunslet Road
          , 
          Leeds
          , 
          LS10 1QN
        </span>
      </p>
    </div>
    <div
      style={
        Object {
          "display": "none",
        }
      }
    >
      <PaymentMethodSelector
        currentMethod="card"
        onPaymentMethodChanged={undefined}
      >
        <div
          className="o-form"
        >
          <div
            aria-label="Use credit or debit card"
            className="c-payment-method-button c-payment-method-button__active"
            onClick={[Function]}
          >
            <span>
              Credit/Debit Card
            </span>
          </div>
          <div
            aria-label="Use paypal"
            className="c-payment-method-button "
            onClick={[Function]}
          >
            <span>
              PayPal
            </span>
          </div>
        </div>
      </PaymentMethodSelector>
      <StripePayment
        checkout={
          Object {
            "billingAddress": Object {
              "city": "Leeds",
              "collapsed": true,
              "completed": true,
              "country_code": "GBP",
              "errors": Object {},
              "first_name": "Prasanna Gaddam",
              "label": "BILLING_LABEL",
              "last_name": "Prasanna Gaddam",
              "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
              "line_2": "Hunslet",
              "primary_phone": "07400000000",
              "state": "Yorkshire",
              "zipcode": "LS10 1QN",
            },
            "currency": "GBP",
            "currentStep": 2,
            "customer": Object {
              "email": "customer@example.com",
              "external_id": "123",
              "name": "John Doe",
            },
            "error": false,
            "lineItems": Array [
              Object {
                "currency": "GBP",
                "paid_price_inc_tax": "10",
                "quantity": 3,
                "retail_price_inc_tax": "10",
                "sku": "SK840763631-2",
                "tax_amount": 0,
                "tax_percentage": 0,
                "title": "Textured Long T Shirt",
              },
            ],
            "loading": false,
            "paid_price_inc_tax": "0105.45",
            "paymentMethod": Object {
              "collapsed": true,
              "completed": false,
              "selectedMethod": "card",
            },
            "request_uuid": 6765757657657,
            "retail_price_inc_tax": "0105.45",
            "reviewOrder": Object {
              "collapsed": true,
              "completed": false,
            },
            "shippingAddress": Object {
              "city": "Leeds",
              "collapsed": true,
              "completed": true,
              "country_code": "GBP",
              "first_name": "Prasanna Gaddam",
              "label": "BILLING_LABEL",
              "last_name": "Prasanna Gaddam",
              "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
              "line_2": "Hunslet",
              "primary_phone": "07400000000",
              "state": "Yorkshire",
              "zipcode": "LS10 1QN",
            },
            "shippingMethod": Object {
              "collapsed": false,
              "completed": true,
              "id": "2",
              "name": "UPS Next Day",
              "paid_price_inc_tax": 5.45,
              "reference": "ups_next_day",
              "retail_price_inc_tax": 5.45,
              "sku": "ups_next_day",
              "tax_amount": 2,
              "tax_percentage": 20,
            },
            "tax_amount": 0,
          }
        }
        order={
          Object {
            "cardErrors": false,
            "cardTokenRequested": false,
          }
        }
        setShippingBillingAddress={[Function]}
      >
        <div
          className="o-form__wrapper"
        >
          <Component
            cardTokenRequested={false}
            checkout={
              Object {
                "billingAddress": Object {
                  "city": "Leeds",
                  "collapsed": true,
                  "completed": true,
                  "country_code": "GBP",
                  "errors": Object {},
                  "first_name": "Prasanna Gaddam",
                  "label": "BILLING_LABEL",
                  "last_name": "Prasanna Gaddam",
                  "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                  "line_2": "Hunslet",
                  "primary_phone": "07400000000",
                  "state": "Yorkshire",
                  "zipcode": "LS10 1QN",
                },
                "currency": "GBP",
                "currentStep": 2,
                "customer": Object {
                  "email": "customer@example.com",
                  "external_id": "123",
                  "name": "John Doe",
                },
                "error": false,
                "lineItems": Array [
                  Object {
                    "currency": "GBP",
                    "paid_price_inc_tax": "10",
                    "quantity": 3,
                    "retail_price_inc_tax": "10",
                    "sku": "SK840763631-2",
                    "tax_amount": 0,
                    "tax_percentage": 0,
                    "title": "Textured Long T Shirt",
                  },
                ],
                "loading": false,
                "paid_price_inc_tax": "0105.45",
                "paymentMethod": Object {
                  "collapsed": true,
                  "completed": false,
                  "selectedMethod": "card",
                },
                "request_uuid": 6765757657657,
                "retail_price_inc_tax": "0105.45",
                "reviewOrder": Object {
                  "collapsed": true,
                  "completed": false,
                },
                "shippingAddress": Object {
                  "city": "Leeds",
                  "collapsed": true,
                  "completed": true,
                  "country_code": "GBP",
                  "first_name": "Prasanna Gaddam",
                  "label": "BILLING_LABEL",
                  "last_name": "Prasanna Gaddam",
                  "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                  "line_2": "Hunslet",
                  "primary_phone": "07400000000",
                  "state": "Yorkshire",
                  "zipcode": "LS10 1QN",
                },
                "shippingMethod": Object {
                  "collapsed": false,
                  "completed": true,
                  "id": "2",
                  "name": "UPS Next Day",
                  "paid_price_inc_tax": 5.45,
                  "reference": "ups_next_day",
                  "retail_price_inc_tax": 5.45,
                  "sku": "ups_next_day",
                  "tax_amount": 2,
                  "tax_percentage": 20,
                },
                "tax_amount": 0,
              }
            }
            onCardTokenReceived={undefined}
            setCardErrors={undefined}
          >
            <p>
              Mocked Card Fields
            </p>
          </Component>
          <div
            className="o-form__input-group"
          >
            <label>
              Billing address *
            </label>
          </div>
          <_class
            checked={false}
            formName={undefined}
            label="Same as shipping address"
            name="shippingAddressAsBillingAddress"
            onBlur={undefined}
            onChange={undefined}
            type="checkbox"
          >
            <Checkbox
              checked={false}
              formName={undefined}
              label="Same as shipping address"
              name="shippingAddressAsBillingAddress"
              onBlur={undefined}
              onChange={undefined}
              renderValidationMessage={[Function]}
              type="checkbox"
            >
              <div
                className="o-form__input-group"
              >
                <label
                  className="o-form__label"
                  htmlFor="shippingAddressAsBillingAddress"
                >
                  <input
                    checked={false}
                    className="o-form__checkbox"
                    id="shippingAddressAsBillingAddress"
                    name="shippingAddressAsBillingAddress"
                    onBlur={[Function]}
                    onChange={[Function]}
                    required={undefined}
                    type="checkbox"
                  />
                  Same as shipping address
                   
                </label>
              </div>
            </Checkbox>
          </_class>
          <AddressForm
            addressType="billing"
            aria-label="Billing address form"
            checkout={
              Object {
                "billingAddress": Object {
                  "city": "Leeds",
                  "collapsed": true,
                  "completed": true,
                  "country_code": "GBP",
                  "errors": Object {},
                  "first_name": "Prasanna Gaddam",
                  "label": "BILLING_LABEL",
                  "last_name": "Prasanna Gaddam",
                  "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                  "line_2": "Hunslet",
                  "primary_phone": "07400000000",
                  "state": "Yorkshire",
                  "zipcode": "LS10 1QN",
                },
                "currency": "GBP",
                "currentStep": 2,
                "customer": Object {
                  "email": "customer@example.com",
                  "external_id": "123",
                  "name": "John Doe",
                },
                "error": false,
                "lineItems": Array [
                  Object {
                    "currency": "GBP",
                    "paid_price_inc_tax": "10",
                    "quantity": 3,
                    "retail_price_inc_tax": "10",
                    "sku": "SK840763631-2",
                    "tax_amount": 0,
                    "tax_percentage": 0,
                    "title": "Textured Long T Shirt",
                  },
                ],
                "loading": false,
                "paid_price_inc_tax": "0105.45",
                "paymentMethod": Object {
                  "collapsed": true,
                  "completed": false,
                  "selectedMethod": "card",
                },
                "request_uuid": 6765757657657,
                "retail_price_inc_tax": "0105.45",
                "reviewOrder": Object {
                  "collapsed": true,
                  "completed": false,
                },
                "shippingAddress": Object {
                  "city": "Leeds",
                  "collapsed": true,
                  "completed": true,
                  "country_code": "GBP",
                  "first_name": "Prasanna Gaddam",
                  "label": "BILLING_LABEL",
                  "last_name": "Prasanna Gaddam",
                  "line_1": "Apartment 19, Waterloo Court, 17 Hunslet Road",
                  "line_2": "Hunslet",
                  "primary_phone": "07400000000",
                  "state": "Yorkshire",
                  "zipcode": "LS10 1QN",
                },
                "shippingMethod": Object {
                  "collapsed": false,
                  "completed": true,
                  "id": "2",
                  "name": "UPS Next Day",
                  "paid_price_inc_tax": 5.45,
                  "reference": "ups_next_day",
                  "retail_price_inc_tax": 5.45,
                  "sku": "ups_next_day",
                  "tax_amount": 2,
                  "tax_percentage": 20,
                },
                "tax_amount": 0,
              }
            }
            formName="billingAddress"
            onBlur={undefined}
            onChange={undefined}
            onShowField={undefined}
            onToggleCollapsed={undefined}
            title="Billing Address"
          >
            <div
              className="o-form"
            >
              <div
                className="o-form__header"
              >
                <div>
                  <h2>
                    Billing Address
                  </h2>
                </div>
                <div>
                  <Button
                    label="Edit"
                    onClick={[Function]}
                    size="lrg"
                  >
                    <button
                      className="o-button o-button--primary o-button--lrg"
                      disabled={false}
                      onClick={[Function]}
                      role="button"
                      tabIndex="0"
                    >
                      Edit
                    </button>
                  </Button>
                </div>
              </div>
              <div>
                <undefined />
              </div>
            </div>
          </AddressForm>
        </div>
      </StripePayment>
    </div>
  </div>
</PaymentMethod>
`;
